# rust-api

./: .env  Cargo.toml  Justfile  README.md  diesel.toml  docker-compose.yaml
migrations/2022-02-19-184607_create_users/: up.sql
scripts/: db.sql
src/: main.rs
src/infra/postgres/: db.rs  mod.rs  schema.rs
src/user/: controller.rs  dto.rs  mod.rs  model.rs  repository.rs  service.rs
